# ocr_tools

./: .gitignore  pyproject.toml
src/ocr/: __init__.py  image_db.py  page.py  tesseract.py
tests/: test_image_db.py  test_tesseract.py
